# ai-native-dev

./: .gitignore
guides/: 04_llm_and_openai_guide.md  05_langchain_guide.md  06_rag_guide.md  08_guardrails_guide.md
labs/02-llm-chat-agent/demo-05-openai-via-open-ai-sdk/: .envbackup  README.md  main.py  pyproject.toml
labs/02-llm-chat-agent/demo-12-streamlit-integration-with-fastapi/: .gitignore  README.md  main.py  pyproject.toml
labs/02-llm-chat-agent/demo-13-streamlit-integration-with-fastapi-streaming/: README.md  main.py  pyproject.toml
labs/03-langchain/demo-01-setting-up-and-calling-an-llm-in-langchain/: README.md  main.py  pyproject.toml
labs/03-langchain/demo-02-basic-llm-invocation-with-retry/: .envbackup  README.md  main.py  pyproject.toml
labs/03-langchain/demo-03-temperature-on-model-responses/: README.md  main.py  pyproject.toml
labs/03-langchain/demo-04-max-token/: README.md  main.py  pyproject.toml
labs/03-langchain/demo-05-max-tokens-and-temperature/: README.md  main.py  pyproject.toml
labs/03-langchain/demo-06-non-blocking-chat-with-llm/: README.md  main.py  pyproject.toml
labs/03-langchain/demo-07-langchain-streaming/: README.md  pyproject.toml
labs/03-langchain/demo-08-greeting-tool/: README.md  main.py  pyproject.toml
labs/03-langchain/demo-09-build-an-external-api-tool-for-geolocation/: .envbackup  README.md  main.py  pyproject.toml
labs/03-langchain/demo-10-agent-setup/: .envbackup  README.md  agent_tools.py  main.py  pyproject.toml
labs/03-langchain/demo-11-automating-customer-support-responses/: README.md  pyproject.toml
labs/03-langchain/demo-12-structuredoutputparser-product-information/: README.md  pyproject.toml
labs/03-langchain/demo-13-automating-email-categorization-with-ai/: README.md  pyproject.toml
labs/03-langchain/demo-14-simple-lcel-chain-demo/: README.md  pyproject.toml
labs/03-langchain/demo-15-sentiment-analysis-lcel-chain-demo/: README.md  pyproject.toml
labs/03-langchain/demo-16-simple-router-chain-api/: README.md  pyproject.toml
labs/03-langchain/demo-17-building-a-fastapi-chat-app-stateless-vs-stateful-prompts/: README.md  pyproject.toml
labs/03-langchain/demo-18-fast-api-text-translation-with-memory-and-chaining/: README.md  pyproject.toml
labs/03-langchain/demo-19-session-based-conversational-memory-in-action/: README.md  pyproject.toml
labs/03-langchain/demo-20-intelligent-customer-support-agent/: README.md  pyproject.toml
labs/03-langchain/demo-21-intelligent-customer-support-assistant-with-frontend/: .envbackup  README.md  pyproject.toml
labs/03-langchain/demo-21-intelligent-customer-support-assistant-with-frontend/backend/: stateful_router_chain.py
labs/03-langchain/demo-21-intelligent-customer-support-assistant-with-frontend/frontend/: streamlit_stateful_agent_ui.py
labs/04-rag/demo-01-sentence-transformers/: README.md  main.py  pyproject.toml
labs/04-rag/demo-04-embedding-crud-with-chromadb/: .env.example  .gitignore  README.md  main.py  pyproject.toml  test_api.sh
labs/04-rag/demo-04-embedding-crud-with-chromadb/docs/: HOW_IT_WORKS.md  QUICKSTART.md
labs/04-rag/demo-05-embedding-crud-with-langchain-chromadb/: .env.example  README.md  main.py  pyproject.toml  test_api.sh
labs/04-rag/demo-05-embedding-crud-with-langchain-chromadb/docs/: LANGCHAIN_BENEFITS.md  QUICKSTART.md
labs/04-rag/demo-06-embedding-crud-with-pinecone/: .env.example  .gitignore  README.md  main.py  pyproject.toml  test_api.sh
labs/04-rag/demo-06-embedding-crud-with-pinecone/docs/: PINECONE_VS_CHROMA.md  QUICKSTART.md
labs/04-rag/demo-07-embedding-crud-with-langchain-vectordb/: .env.example  .gitignore  README.md  demo_switch.sh  main.py  pyproject.toml  test_api.sh
labs/04-rag/demo-07-embedding-crud-with-langchain-vectordb/docs/: QUICKSTART.md
labs/04-rag/demo-08-load-from-multiple-sources/: .gitignore  README.md  main.py  pyproject.toml  test_demo.sh
labs/04-rag/demo-08-load-from-multiple-sources/Documents/: guidelines.txt  policy.txt
labs/04-rag/demo-08-load-from-multiple-sources/docs/: QUICKSTART.md
labs/04-rag/demo-09-rag-ingestion-pipeline/: .env.example  .gitignore  README.md  main.py  pyproject.toml  test_demo.sh
labs/04-rag/demo-09-rag-ingestion-pipeline/docs/: QUICKSTART.md
labs/04-rag/demo-10-rag-retrieval-pipeline/: .env.example  .gitignore  README.md  main.py  pyproject.toml  test_demo.sh
labs/04-rag/demo-10-rag-retrieval-pipeline/docs/: QUICKSTART.md
labs/04-rag/demo-12-rag-fastapi-service/: .env.example  .gitignore  DEPLOYMENT_SUMMARY.md  README.md  main.py  pyproject.toml  test_api.py  test_api.sh
labs/04-rag/demo-12-rag-fastapi-service/Documents/: guidelines.txt  policy.txt
labs/04-rag/demo-12-rag-fastapi-service/docs/: API_EXAMPLES.md  QUICKSTART.md
labs/05-mcp/: README.md
labs/05-mcp/demo-01-basic-mcp-stdio/: .gitignore  README.md  main.py  pyproject.toml
labs/05-mcp/demo-02-mcp-calculator-tools/: README.md  main.py  pyproject.toml
labs/05-mcp/demo-03-mcp-weather-server/: .env.example  .gitignore  README.md  main.py  pyproject.toml
labs/05-mcp/demo-04-mcp-filesystem-server/: .gitignore  README.md  main.py  pyproject.toml
labs/05-mcp/demo-04-mcp-filesystem-server/sandbox/: demo.txt
labs/05-mcp/demo-06-mcp-http-transport/: README.md  main.py  pyproject.toml  test_api.sh
labs/05-mcp/demo-07-langchain-mcp-integration/: .env.example  .gitignore  README.md  main.py  pyproject.toml
