[project]
name = "demo-06-non-blocking-chat-with-llm"
version = "0.1.0"
description = "LangChain + Gemini with Async Operations"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.128.0",
    "uvicorn==0.40.0",
    "python-dotenv==1.2.1",
    "pydantic==2.12.5",
    "langchain==1.2.8",
    "langchain-openai==1.1.7",
]
