[project]
name = "demo-07-langchain-streaming"
version = "0.1.0"
description = "LangChain streaming responses demonstration with multi-provider support"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.128.0",
    "uvicorn==0.40.0",
    "python-dotenv==1.2.1",
    "langchain==1.2.8",
    "langchain-openai==1.1.7",
]
