[project]
name = "demo-1-greeting-tool"
version = "0.1.0"
description = "A FastAPI application demonstrating LangChain tool integration with Google Generative AI."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.121.0",
	"uvicorn[standard]==0.38.0",
    "langchain==1.0.0",
    "langchain-core==1.0.1",
]
