[project]
name = "demo-08-greeting-tool"
version = "0.1.0"
description = "A FastAPI application demonstrating LangChain tool integration with Google Generative AI."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.128.0",
    "uvicorn==0.40.0",
    "langchain==1.2.8",
]
