[project]
name = "demo-09-build-an-external-api-tool-for-geolocation"
version = "0.1.0"
description = "A FastAPI application that demonstrates how to create and use external tools with LangChain. This demo fetches a user's geographical location based on their IP address using the apiip.net service."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.128.0",
    "uvicorn==0.40.0",
    "requests==2.32.5",
    "python-dotenv==1.2.1",
    "langchain==1.2.8",
]
