[project]
name = "demo-10-agent-executor-setup"
version = "0.1.0"
description = "Modern LangChain Agent Executor Example"
requires-python = ">=3.10"

dependencies = [
    "fastapi==0.121.0",
    "uvicorn[standard]==0.38.0",
    "langchain==1.0.0",
    "langgraph==1.0.0",
    "langchain-core==1.0.1",
    "langchain-openai==1.0.0",
    "langchain-community==0.4.1",
    "python-dotenv==1.2.1",
   
]
