[project]
name = "demo-10-agent-executor-setup"
version = "0.1.0"
description = "Modern LangChain Agent Executor Example"
requires-python = ">=3.12"

dependencies = [
    "fastapi==0.128.0",
    "uvicorn==0.40.0",
    "python-dotenv==1.2.1",
    "requests==2.32.5",
    "langchain==1.2.8",
    "langchain-openai==1.1.7",
    "langchain-community==0.4.1"
]
