[project]
name = "demo-12-structuredoutputparser-product-information"
version = "0.1.0"
description = "A FastAPI application demonstrating how to use LangChain's `StructuredOutputParser` to extract structured data from AI model responses using Google's Gemini AI model."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.128.0",
    "uvicorn==0.40.0",
    "python-dotenv==1.2.1",
    "pydantic==2.12.5",
    "langchain==1.2.8",
    "langchain-openai==1.1.7",
]
