[project]
name = "demo-21-intelligent-customer-support-assistant-with-frontend"
version = "0.1.0"
description = "Full-stack intelligent customer support assistant with FastAPI backend and Streamlit frontend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.28.0",
    "fastapi==0.128.0",
    "uvicorn==0.40.0",
    "python-dotenv==1.2.1",
    "requests==2.32.5",
    "langchain==1.2.8",
    "langchain-openai==1.1.7",
    "langchain-community==0.4.1",
]
