[project]
name = "demo-04-embedding-crud-with-chromadb"
version = "0.1.0"
description = "Simple ChromaDB CRUD operations with OpenAI embeddings and FastAPI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=0.4.22",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "python-dotenv>=1.0.0",
    "openai>=1.10.0",
    "pydantic>=2.5.0"
]
