[project]
name = "demo-05-embedding-crud-with-langchain-chromadb"
version = "0.1.0"
description = "Simple CRUD operations with LangChain, ChromaDB, and OpenAI embeddings"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    "langchain-chroma>=0.1.0",
    "chromadb>=0.4.22",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0"
]
