[project]
name = "demo-06-embedding-crud-with-pinecone"
version = "0.1.0"
description = "Simple Pinecone CRUD operations with OpenAI embeddings and FastAPI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pinecone>=3.0.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "python-dotenv>=1.0.0",
    "openai>=1.10.0",
    "pydantic>=2.5.0"
]
