[project]
name = "demo-07-embedding-crud-with-langchain-vectordb"
version = "0.1.0"
description = "LangChain with multiple vector databases (ChromaDB or Pinecone)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    "langchain-chroma>=0.1.0",
    "langchain-pinecone>=0.1.0",
    "chromadb>=0.4.22",
    "pinecone-client>=5.0.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0"
]
