[project]
name = "demo-09-rag-ingestion-pipeline"
version = "0.1.0"
description = "Complete RAG ingestion pipeline: Load → Chunk → Embed → Store → Query"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.1.0",
    "langchain-community>=0.0.20",
    "langchain-openai>=0.0.5",
    "langchain-chroma>=0.1.0",
    "langchain-pinecone>=0.1.0",
    "langchain-text-splitters>=0.0.1",
    "chromadb>=0.4.22",
    "pinecone-client>=5.0.0",
    "pypdf>=4.0.0",
    "beautifulsoup4>=4.12.0",
    "python-dotenv>=1.0.0",
]
