[project]
name = "demo-06-mcp-http-transport"
version = "0.1.0"
description = "MCP server using HTTP/REST transport instead of stdio"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=0.1.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "httpx>=0.27.0",
    "pydantic>=2.5.0",
]
