[project]
name = "demo-07-langchain-mcp-integration"
version = "0.1.0"
description = "Integrating FastMCP tools with LangChain agents for powerful AI workflows"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=0.1.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
]
